eks/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "frontend-deployment"
  namespace: "default"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "frontend"
  template:
    metadata:
      labels:
        app: "frontend"
    spec:
      containers:
      - image: 535882074894.dkr.ecr.us-east-1.amazonaws.com/k8s-microservices-poc/frontend:v1
        imagePullPolicy: Always
        name: "frontend"
        ports:
        - containerPort: 8080
