eks/orders-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "orders-deployment"
  namespace: "default"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "orders"
  template:
    metadata:
      labels:
        app: "orders"
    spec:
      containers:
      - image: 535882074894.dkr.ecr.us-east-1.amazonaws.com/k8s-microservices-poc/orders:v1
        imagePullPolicy: Always
        name: "orders"
        ports:
        - containerPort: 8082
