eks/products-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: products
    app.kubernetes.io/instance: k8s-microservices-poc
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: k8s-microservices-poc
    app.kubernetes.io/managed-by: kubectl
  name: "products"
  namespace: "default"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "products"
  template:
    metadata:
      labels:
        app: "products"
    spec:
      containers:
      - image: 535882074894.dkr.ecr.us-east-1.amazonaws.com/k8s-microservices-poc/products:v1
        imagePullPolicy: Always
        name: "products"
        ports:
        - containerPort: 8081
