eks/colorteller-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app.kubernetes.io/name: colorteller
    app.kubernetes.io/instance: k8s-microservices-ct
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: k8s-microservices-ct
    app.kubernetes.io/managed-by: kubectl
  name: "colorteller"
  namespace: "default"
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  type: NodePort
  selector:
    app: "colorteller"
